15/10/2006 - Chris
	* Really fixed the product constraint this time. The non-binary case
	  could still be improved when some of the variables can be negative.

15/10/2006 - Chris
	* I should probably be writing my Phd :)
	* Fixed 0/1 product constraint. We still don't get any decent level
	  of propagation on non-0/1 product constraints. Anyone want to try?

14/10/2006 - Chris
	* There was a bug with reading large number ( > 65000 ). Fixed that, at the
	  same time sped up parsing numbers.
	* Hopefully the testsuite works again now :)

11/10/2006 - Chris
	* Going to try to start to keep changelog up to date!
	* Replaced many occurrences of bool with BOOL. BOOL is defined to be
	  int. This is used because in most cases bool and int are 
	  interchangable. (except when you want true to be equal 1), 
	  but can interfere with optimisation.
	* Removed the ability to add static triggers to domain values, as only
	  one constraint (GACElement) was using it, it's faster without, and the
	  GeCode people agree it only makes things slower.
	  
	  
17/03/2006 - Chris
	* Release 0.2.1
16/03/2006 - Chris
	* Fix variables of domain size > 32. Add a few files